--- a/styles.css
+++ b/styles.css
@@ -137,7 +137,7 @@ body {
 }
 
 .copy-btn:hover img {
-    content: url("/img/copy_icon_white.png");
+    content: url("img/copy_icon_white.png");
 }
 
 /* Active Styles */
@@ -151,7 +151,7 @@ body {
 }
 
 .copy-btn:active img {
-    content: url("/img/copy_icon_white.png");
+    content: url("img/copy_icon_white.png");
 }
 
 /* Slider Layout */
@@ -349,7 +349,7 @@ h1, h2 {
     position: absolute;
     width: 90%; 
     height: 90%; 
-    background-image: url("/img/tick.png");
+    background-image: url("img/tick.png");
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center; 
