--- a/styles.css
+++ b/styles.css
@@ -68,7 +68,7 @@ body {
 .farbfeld.aufgabe, .farbfeld.eingabe {
     flex: 1 1 0;
     border: 1dvh solid;
-    box-sizing: border-box; 
+    box-sizing: border-box;
     border-top-color: #7a7a7a;
     border-left-color: #7a7a7a;
     border-right-color: #e5e5e5;
@@ -83,7 +83,7 @@ body {
 }
 
 /* Buttons */
-.copy-btn, .submit-btn, .help-btn { 
+.copy-btn, .submit-btn, .help-btn {
     font-family: "MS Sans Serif";
     font-weight: bold;
     background: #d1d1d1;
@@ -93,7 +93,7 @@ body {
     border-left-color: #fcfcfc;
     border-right-color: #000000;
     border-bottom-color: #000000;
-    padding: 0.5dvh 1dvw; 
+    padding: 0.5dvh 1dvw;
     font-size: 1rem;
     letter-spacing: 0.1em;
     text-align: center;
@@ -107,11 +107,28 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    position: relative;
 }
 
 .copy-btn img {
-    width: 1rem;     
+    width: 1rem;
     height: 1rem;
+    position: absolute;
+}
+
+/* ICON-HOVER-LOGIK (ersetzt content:url) */
+.copy-btn img.icon-hover {
+    opacity: 0;
+}
+
+.copy-btn:hover img.icon-hover,
+.copy-btn:active img.icon-hover {
+    opacity: 1;
+}
+
+.copy-btn:hover img.icon-default,
+.copy-btn:active img.icon-default {
+    opacity: 0;
 }
 
 .submit-btn {
@@ -119,12 +136,12 @@ body {
 }
 
 /* Help Button */
-.help-btn { 
-    width: 2rem; 
-    height: 2rem; 
-    font-size: 1.5rem; 
-    line-height: 1.5rem; 
-    padding: 0; 
+.help-btn {
+    width: 2rem;
+    height: 2rem;
+    font-size: 1.5rem;
+    line-height: 1.5rem;
+    padding: 0;
     align-self: center;
     box-sizing: border-box;
 }
@@ -136,22 +153,14 @@ body {
     color: white;
 }
 
-.copy-btn:hover img {
-    content: url("../img/copy_icon_white.png");
-}
-
 /* Active Styles */
 .copy-btn:active, .submit-btn:active, .help-btn:active {
-    border-top-color: #000000;     
-    border-left-color: #000000;   
-    border-right-color: #fcfcfc;   
-    border-bottom-color: #fcfcfc;  
+    border-top-color: #000000;
+    border-left-color: #000000;
+    border-right-color: #fcfcfc;
+    border-bottom-color: #fcfcfc;
     background: #404040;
     color: white;
-}
-
-.copy-btn:active img {
-    content: url("../img/copy_icon_white.png");
 }
 
 /* Slider Layout */
@@ -159,29 +168,30 @@ body {
     display: flex;
     flex-direction: column;
     gap: 1dvh;
-    padding-top: 1dvh; 
+    padding-top: 1dvh;
 }
+
 .slider-row {
     display: flex;
     align-items: center;
-    gap: 1dvw; 
+    gap: 1dvw;
 }
 
 .slider-label, .slider-value {
     flex-shrink: 0;
-    padding: 0.5dvh; 
+    padding: 0.5dvh;
     font-weight: bold;
-    min-width: 1.5rem; 
+    min-width: 1.5rem;
     text-align: center;
 }
 
 /* Slider-Größe anpassen */
 .slider-row input[type="range"] {
     flex-grow: 1;
-    max-width: 80%; 
+    max-width: 80%;
 }
 
-/* Slider Styles: */
+/* Slider Styles */
 input[type="range"] {
     -webkit-appearance: none;
     appearance: none;
@@ -198,7 +208,7 @@ input[type="range"]::-webkit-slider-runnable-track {
     border-right-color: white;
     border-bottom-color: white;
     border-left-color: #404040;
-    border-top-color: #404040; 
+    border-top-color: #404040;
 }
 
 input[type="range"]::-webkit-slider-thumb {
@@ -216,25 +226,22 @@ input[type="range"]::-webkit-slider-thumb {
     cursor: grab;
 }
 
-/* Slider Thumb Hover Style */
 input[type="range"]::-webkit-slider-thumb:hover {
-    background: #528c97; 
+    background: #528c97;
     border-color: #404040;
 }
 
-/* Slider Thumb Active Style */
 input[type="range"]:active::-webkit-slider-thumb {
     cursor: grabbing;
-    width: 3dvh; 
+    width: 3dvh;
     height: 3dvh;
-    margin-top: calc(-1.5dvh + 0.75dvh); 
-    border-top-color: #000000;     
-    border-left-color: #000000;   
-    border-right-color: #fcfcfc;   
-    border-bottom-color: #fcfcfc;  
+    margin-top: calc(-1.5dvh + 0.75dvh);
+    border-top-color: #000000;
+    border-left-color: #000000;
+    border-right-color: #fcfcfc;
+    border-bottom-color: #fcfcfc;
     background: #404040;
 }
-
 
 /* Firefox */
 input[type="range"]::-moz-range-track {
@@ -260,7 +267,7 @@ input[type="range"]::-moz-range-thumb {
 }
 
 input[type="range"]::-moz-range-thumb:hover {
-    background: #528c97; 
+    background: #528c97;
     border-color: #404040;
 }
 
@@ -268,37 +275,35 @@ input[type="range"]:active::-moz-range-thumb {
     cursor: grabbing;
     width: 3dvh;
     height: 3dvh;
-    border-top-color: #000000;     
-    border-left-color: #000000;   
-    border-right-color: #fcfcfc;   
-    border-bottom-color: #fcfcfc;  
+    border-top-color: #000000;
+    border-left-color: #000000;
+    border-right-color: #fcfcfc;
+    border-bottom-color: #fcfcfc;
     background: #404040;
 }
-
 
 /* Titelzeilen */
 h1, h2 {
     padding: 0;
 }
 
-/* title-row für Wrap-Verhalten konfigurieren */
+/* title-row */
 .title-row {
     display: flex;
     align-items: center;
-    flex-wrap: wrap; 
+    flex-wrap: wrap;
     gap: 1dvw;
 }
 
-/* Level-Group muss den restlichen Platz einnehmen (und umbrechen) */
-.level-group { 
+/* Level-Group */
+.level-group {
     display: flex;
     align-items: center;
-    gap: 0.5dvw; 
+    gap: 0.5dvw;
     margin-left: auto;
-    flex-basis: auto; 
-    flex-grow: 1; 
-    justify-content: flex-end; 
-    min-width: 300px; 
+    flex-grow: 1;
+    justify-content: flex-end;
+    min-width: 300px;
 }
 
 /* Levelanzeige */
@@ -312,52 +317,30 @@ h1, h2 {
     height: 2rem;
     border: 0.2rem solid;
     background: #c0c0c0;
-    transition: all .15s ease;
     position: relative;
     border-top-color: #7a7a7a;
     border-left-color: #7a7a7a;
     border-right-color: #e5e5e5;
     border-bottom-color: #e5e5e5;
     display: flex;
-    align-items: center;    
+    align-items: center;
     justify-content: center;
     font-size: 1.5rem;
 }
 
-.lvl.level-active {
-    background: #528c97; 
-}
-
-.lvl.level-current {
-    background: #c0c0c0;
-    outline: 0.2rem dashed #404040;
-    outline-offset: 0.1rem;
-}
-
-.lvl.level-inactive {
-    background: #c0c0c0;
-    opacity: 0.5;
-}
-
 .lvl.completed {
-    color: transparent; 
+    color: transparent;
 }
 
-/* Haken-Größe und Zentrierung (Vertikale Korrektur) */
-.lvl.completed::after {
-    content: "";
+.lvl.completed img {
     position: absolute;
-    width: 90%; 
-    height: 90%; 
-    background-image: url("img/tick.png");
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: center; 
+    width: 90%;
+    height: 90%;
+    object-fit: contain;
     left: 50%;
     top: 50%;
-    transform: translate(-50%, -40%); 
+    transform: translate(-50%, -40%);
 }
-
 /* ---------------------------------------------------------------------------------- */
 /* MODAL STYLES (Unverändert) */
 /* ---------------------------------------------------------------------------------- */
